manifests/aks/14-orders-db-svc.yaml
# orders-db Service — ClusterIP 27017 -> container 27017.
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  namespace: sock-shop
  labels:
    name: orders-db
    app: orders-db
spec:
  type: ClusterIP
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    name: orders-db
