manifests/aks/16-payment-svc.yaml
# payment Service — ClusterIP 80 -> container 8080.
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: sock-shop
  labels:
    name: payment
    app: payment
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: payment
