manifests/aks/24-shipping-svc.yaml
# shipping Service — ClusterIP 80 -> container 8080.
apiVersion: v1
kind: Service
metadata:
  name: shipping
  namespace: sock-shop
  labels:
    name: shipping
    app: shipping
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: shipping
