manifests/aks/26-user-svc.yaml
# user Service — ClusterIP 80 -> container 8080.
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: sock-shop
  labels:
    name: user
    app: user
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: user
